Fixed navbar moving due to scrollbar disappaering issue

--- a/src/layouts/Navbar/Navbar.module.css
+++ b/src/layouts/Navbar/Navbar.module.css
@@ -1,19 +1,14 @@
-.navbar {
-  height: var(--navbar-height);
-  width: 100vw;
-  background: #fff;
-  position: fixed;
-  top: 0;
-}
-
 .nav-top {
   height: 75px;
+  background: #fff;
+  position: sticky;
+  top: 0;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid var(--primary-border-color);
   padding: 0 111px;
-  width: 100%;
 }
 
 .nav-left,
@@ -43,6 +38,7 @@
 
 /* Nav bottom */
 .nav-bottom {
+  width: 100%;
   height: 53px;
   border-bottom: 1px solid var(--primary-border-color);
   padding: 0 111px;
