--- a/src/layouts/PageContainer/PageContainer.module.css
+++ b/src/layouts/PageContainer/PageContainer.module.css
@@ -1,6 +1,5 @@
 .all-containers {
   min-height: calc(100vh - var(--navbar-height));
-  margin-top: var(--navbar-height);
 }
 
 .wide {
